--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "@types/uuid": "^10.0.0",
     "eslint": "^9.34.0",
     "nodemon": "^3.1.10",
-    "prisma": "^6.14.0"
+    "prisma": "^6.14.0",
+    "prisma-openapi": "^1.3.6"
   }
 }
